Wed Mar  9 21:09:34 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c, port-xmarshaled-queue.rb: xmarshaled-queue対応
	* p-filter.rb, port.rb: fibermon対応
	* p-task.rb, processor.rb: デバッグコード挿入

Tue Mar  8 00:26:56 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-task.rb, processor.rb, port-marshaled-queue.rb, port.rb: new
	 iber-mon対応
	
	* port-xmarshaled-queue.rb,
	  ext/xmarshaled-queue/{extconf.rb,xmarshaled_queue.c}:
	  xmarshaled-queue追加

Fri Mar  4 00:41:58 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/string-buffer/string-buffer.c: StringBuffer#size追加

Wed Mar  2 22:14:07 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/string-buffer/extconf.rb, ext/string-buffer/string-buffer.c:
	  StringBuffer追加

Tue Mar  1 21:51:04 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb, here.rb, controller.rb, master.rb,
	  c-basic-group-by.rb, c-cat.rb, c-direct-product.rb, c-filter.rb,
	  c-junction.rb, c-seg-join.rb, c-seg-shuffle.rb, c-seg-split.rb,
	  c-seg-zip.rb, c-sort.rb, c-wc.rb, node.rb, p-barrier.rb,
	  p-basic-group-by.rb, p-direct-product.rb, p-filter.rb, p-find.rb,
	  p-group-by.rb, p-inject.rb, p-output-file.rb, p-seg-join.rb,
	  p-seg-zip.rb, p-sort.rb, p-wc.rb, processor.rb, log.rb,
	  pool-dictionary.rb, port.rb, reference.rb, varray.rb, vfile.rb:
	  xthread対応

Thu Dec  9 19:11:40 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port-marshaled-queue.rb, port.rb, log-analysis.rb: ログ解析機能を強化

Mon Dec  6 16:57:10 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* tools/cap_recipe/Capfile: install, uninstall タスクに問題があった.

Mon Dec  6 11:12:07 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy-0.6.0-001 release

Wed Dec  1 18:01:00 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.gemspec: ext以下もパッケージするようにした.

Wed Dec  1 17:18:16 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* logger.rb: MARK_INTERVALがnilの時の対応をした

Wed Dec  1 16:03:30 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.gemspec: ちょっと修正
