@@ -111,6 +111,9 @@ module Fairy
     def_prop :MARSHAL_QUEUE_MIN_CHUNK_NO
     def_prop :SIZEDMARSHAL_QUEUE_MAX_CHUNK_NO
 
+    def_prop :XMARSHAL_QUEUE_CHUNK_SIZE
+    def_prop :XMARSHAL_QUEUE_MIN_CHUNK_NO
+
     def_prop :SORTEDQUEUE_POOL_THRESHOLD
     def_prop :SORTEDQUEUE_THRESHOLD
     def_prop :SORTEDQUEUE_SORTBY
@@ -299,6 +302,9 @@ module Fairy
   DEFAULT_CONF.MARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.MARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.SIZEDMARSHAL_QUEUE_MAX_CHUNK_NO = 10
+
+  DEFAULT_CONF.XMARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.MARSHAL_QUEUE_CHUNK_SIZE 
+  DEFAULT_CONF.XMARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.MARSHAL_QUEUE_MIN_CHUNK_NO 
   
   DEFAULT_CONF.SORTEDQUEUE_POOL_THRESHOLD = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.SORTEDQUEUE_THRESHOLD = 10000/2
